--- a/index.html
+++ b/index.html
@@ -71,6 +71,60 @@
 							<h1>Комплексное сопровождение процедуры банкротства юридических лиц Ликвидация юридического лица через процедуру банкротства</h1>
 						</div>
 					</div>
+					<div class="col-xs-12">
+						<div class="subtitle_wrap">
+							<h3>
+								услуги:
+							</h3>
+						</div>
+					</div>
+					<div class="col-xs-12">
+						<div class="items">
+							<div class="item">
+								<div class="img_wrap">
+									<img src="img/icon_podg.png" alt="Подготовка к процедуре банкротства">
+								</div>
+								<p>Подготовка к процедуре банкротства</p>
+							</div>
+							<div class="item">
+								<div class="img_wrap">
+									<img src="img/icon_podg.png" alt="Подготовка к процедуре банкротства">
+								</div>
+								<p>Подготовка к процедуре банкротства</p>
+							</div>
+							<div class="item">
+								<div class="img_wrap">
+									<img src="img/icon_podg.png" alt="Подготовка к процедуре банкротства">
+								</div>
+								<p>Подготовка к процедуре банкротства</p>
+							</div>
+							<div class="item">
+								<div class="img_wrap">
+									<img src="img/icon_podg.png" alt="Подготовка к процедуре банкротства">
+								</div>
+								<p>Подготовка к процедуре банкротства</p>
+							</div>
+							<div class="item">
+								<div class="img_wrap">
+									<img src="img/icon_podg.png" alt="Подготовка к процедуре банкротства">
+								</div>
+								<p>Подготовка к процедуре банкротства</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-xs-12">
+						<div class="form_home_sect">
+							<h3>оставьте заявку</h3>
+							<p>на получение консультации у <strong>арбитражного управляющего</strong></p>
+							<div class="form_wrap">
+								<form action="#">
+									<input type="text" name="name" required placeholder="Ваше имя">
+									<input type="tel" name="tel" required placeholder="Ваш номер телефона">
+									<button type="submit" class="button">Получить консультацию</button>
+								</form>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
