--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
 					</div>
 					<div class="wrap_menu">
 						<nav class="menu">
-						<ul>
-							<li><a class="first" href="#">Услуги</a></li>
-							<li><a href="#">Преимущества</a></li>
-							<li><a href="#">Процедура банкротства</a></li>
-							<li><a href="#">О нас</a></li>
-							<li><a href="#">Цены</a></li>
-							<li><a href="#">Контакты</a></li>
-						</ul>
+							<ul>
+								<li><a class="first" href="#">Услуги</a></li>
+								<li><a href="#">Преимущества</a></li>
+								<li><a href="#">Процедура банкротства</a></li>
+								<li><a href="#">О нас</a></li>
+								<li><a href="#">Цены</a></li>
+								<li><a href="#">Контакты</a></li>
+							</ul>
 						</nav>
 					</div>
 				</div>
@@ -129,6 +129,149 @@
 			</div>
 		</div>
 	</header>
+
+	<section class="sect_white section1">
+		<div class="title_sect_wrap">
+			<h2>КЛЮЧЕВЫЕ ПРЕИМУЩЕСТВА</h2>
+		</div>
+		<div class="container">
+			<div class="row row_pbot">
+				<div class="col-xs-4 clearpad">
+					<div class="item_preim">
+						<div class="img_wrap">
+							<img src="img/icon_sect1.png" alt="Консультация">
+						</div>
+						<h4>Консультация</h4>
+						<p>Бесплатная консультация по Вашей проблеме, мы предложим несколько вариантов решения специально для Вас</p>
+					</div>
+				</div>
+				<div class="col-xs-4 clearpad">
+					<div class="item_preim">
+						<div class="img_wrap">
+							<img src="img/icon2_sect1.png" alt="Консультация">
+						</div>
+						<h4>Опыт и компетенции</h4>
+						<p>Нашими арбитражными управляющими и юристами накоплен уникальный опыт банкротства компаний с задолженностью <strong>от 3 млн. руб. до 1,5 млрд. руб.</strong></p>
+					</div>
+				</div>
+				<div class="col-xs-4 clearpad">
+					<div class="item_preim">
+						<div class="img_wrap">
+							<img src="img/icon3_sect1.png" alt="Консультация">
+						</div>
+						<h4>Комплексное сопровождение</h4>
+						<p>Мы берем на себя весь процесс проведения процедуры банкротства до финального результата</p>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+			</div>
+			<div class="row">
+				<div class="col-xs-4 clearpad">
+					<div class="item_preim">
+						<div class="img_wrap">
+							<img src="img/icon4_sect1.png" alt="Консультация">
+						</div>
+						<h4>Самая низкая цена на рынке услуг по банкротству</h4>
+						<p>Наши цены в разы ниже чем у конкурентов, <strong>как минимум на 30%</strong>, что достигается за счет существенной  экономии на издержках</p>
+					</div>
+				</div>
+				<div class="col-xs-4 clearpad">
+					<div class="item_preim">
+						<div class="img_wrap">
+							<img src="img/icon5_sect1.png" alt="Консультация">
+						</div>
+						<h4>Гибкий подход</h4>
+						<p>Мы разрабатываем уникальный сценарий банкротства для каждого клиента индивидуально, достигая поставленных целей</p>
+					</div>
+				</div>
+				<div class="col-xs-4 clearpad">
+					<div class="item_preim">
+						<div class="img_wrap">
+							<img src="img/icon6_sect1.png" alt="Консультация">
+						</div>
+						<h4>Отсутствие рисков</h4>
+						<p>Непогашенная задолженность перед бюджетом, контрагентами и другими кредиторами будет списана по решению суда</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="sect_color section2">
+		<div class="title_sect_wrap">
+			<h2>КАК ПРОИСХОДИТ БАНКРОТСТВО</h2>
+			<p>Банкроство проходит в 6 этапов и занимает <strong>от 3 до 6 месяцев.</strong></p>
+		</div>
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-4 col-xs-offset-2 clearpad">
+					<div class="item_sect3_left">
+						<div class="number">
+							1
+						</div>
+						<div class="item_descr">
+							<p>Консультация, анализ ситуации, создание индивидуального сценария банкротства</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-xs-4 clearpad">
+					<div class="item_sect3_right">
+						<div class="item_descr">
+							<p>Подготовка документов, начало процедуры </p>
+						</div>
+						<div class="number">
+							2
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-4 col-xs-offset-2 clearpad">
+					<div class="item_sect3_left">
+						<div class="number">
+							3
+						</div>
+						<div class="item_descr">
+							<p>Признание должника банкротом, утверждение конкурсного управляющего</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-xs-4 clearpad">
+					<div class="item_sect3_right">
+						<div class="item_descr">
+							<p>Проведение процедуры банкротства</p>
+						</div>
+						<div class="number">
+							4
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-4 col-xs-offset-2 clearpad">
+					<div class="item_sect3_left">
+						<div class="number">
+							5
+						</div>
+						<div class="item_descr">
+							<p>Собрание кредиторов, завершение процедуры банкротства</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-xs-4 clearpad">
+					<div class="item_sect3_right">
+						<div class="item_descr">
+							<p>Исключение компании из ЕГРЮЛ</p>
+						</div>
+						<div class="number">
+							6
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 	
 	<div class="hidden"></div>
 
