--- a/index.html
+++ b/index.html
@@ -272,6 +272,160 @@
 			</div>
 		</div>
 	</section>
+
+	<section class="sect_white section4">
+		<div class="title_sect_wrap">
+			<h2>ВАША ЗАДОЛЖЕННОСТЬ ТЕПЕРЬ НАША ЗАБОТА</h2>
+			<p>Доверьте комплексное сопровождение процедуры банкротства опытным арбитражным управляющим </p>
+		</div>
+
+		<div class="top_button">
+			<a href="#">Получить консультацию сейчас</a>
+		</div>
+		
+	</section>
+
+	<section class="sect_color section5">
+		<div class="title_sect_wrap">
+			<h2>НАШИ АРБИТРАЖНЫЕ УПРАВЛЯЮЩИЕ</h2>
+		</div>
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-4 col-xs-offset-1 clearpad">
+					<div class="item_sect3_left stroka">
+						<div class="item_descr">
+							<p>Имеют членство в СРО НП «СГАУ»</p>
+						</div>
+						<div class="number">
+							I
+						</div>
+					</div>
+				</div>
+				<div class="col-xs-4 col-xs-offset-2 clearpad">
+					<div class="item_sect3_right">
+						<div class="number">
+							II
+						</div>
+						<div class="item_descr">
+							<p>Обладают опытом работы в делах о банкротстве <strong>более 4 лет</strong></p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-4 col-xs-offset-1 clearpad">
+					<div class="item_sect3_left strokaIII">
+						<div class="item_descr">
+							<p>Ежегодно страхуют ответственность на <strong>3 млн. руб.</strong></p>
+						</div>
+						<div class="number">
+							III
+						</div>
+					</div>
+				</div>
+				<div class="col-xs-4 col-xs-offset-2 clearpad">
+					<div class="item_sect3_right strokaIV">
+						<div class="number">
+							IV
+						</div>
+						<div class="item_descr">
+							<p>Провели более <strong>100</strong> процедур банкротства юридических лиц</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-4 col-xs-offset-1 clearpad">
+					<div class="item_sect3_left">
+						<div class="item_descr">
+							<p>Имеют опыт руководящей работы <strong>более 2 лет</strong></p>
+						</div>
+						<div class="number">
+							V
+						</div>
+					</div>
+				</div>
+				<div class="col-xs-4 col-xs-offset-2 clearpad">
+					<div class="item_sect3_right srokaVI">
+						<div class="number">
+							VI
+						</div>
+						<div class="item_descr">
+							<p>Работают с командой высококвалифицированных <strong>оценщиков и юристов</strong></p>
+						</div>
+					</div>
+				</div>
+			</div>
+			
+			
+		</div>
+	</section>
+
+	<section class="sect_white section6">
+		<div class="title_sect_wrap">
+			<h2>Ваши дальнейшие действия</h2>
+		</div>
+
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-4 col-xs-offset-2">
+					<div class="item_first">
+						<div class="img_wrap">
+							<img src="img/icon1_sect6.png" alt="Что нужно?">
+						</div>
+						<div class="descr_wrap">
+							<h3>Что Вам нужно, чтобы начать банкротство?</h3>
+						</div>
+					</div>
+				</div>
+				<div class="col-xs-4">
+					<div class="item1_sect6 wr_bef">
+						<div class="img_wrap">
+							<img src="img/icon2_sect6.png" alt="Что нужно?">
+						</div>
+						<div class="descr_wrap">
+							<h4>Предоставить информацию</h4>
+							<p>и Вы получите бесплатную консультацию по сложившейся ситуации</p>
+						</div>
+					</div>
+				</div>
+
+			</div>
+			<div class="row">
+				<div class="col-xs-3 col-xs-offset-4">
+					<div class="item_wr">
+						<div class="item1_sect6">
+							<div class="img_wrap">
+							<img src="img/icon3_sect6.png" alt="Что нужно?">
+							</div>
+							<div class="descr_wrap">
+								<h4>Оставьте заявку</h4>
+								<p>на сайте и мы свяжемся с Вами в течение <strong>10 минут</strong></p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-xs-4">
+					<div class="item_wr_last">
+						<div class="item1_sect6">
+							<div class="img_wrap">
+								<img src="img/icon4_sect6.png" alt="Что нужно?">
+							</div>
+							<div class="descr_wrap">
+								<h4>заключить договор</h4>
+								<p>и мы незамедлительно приступим к исполнению всех своих обязательств</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="top_button">
+			<a href="#">Оставьте заявку на сайте</a>
+		</div>
+		
+	</section>
 	
 	<div class="hidden"></div>
 
