done not function

--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
 					<div class="item_wr">
 						<div class="item1_sect6">
 							<div class="img_wrap">
-							<img src="img/icon3_sect6.png" alt="Что нужно?">
+								<img src="img/icon3_sect6.png" alt="Что нужно?">
 							</div>
 							<div class="descr_wrap">
 								<h4>Оставьте заявку</h4>
@@ -426,6 +426,86 @@
 		</div>
 		
 	</section>
+
+	<section class="sect_color section7">
+		<div class="title_sect_wrap">
+			<h2>СТОИМОСТЬ БАЗОВОЙ ПРОЦЕДУРЫ</h2>
+		</div>
+		<div class="wrap_rash">
+			<div class="rash">
+				<p><strong>90 000</strong> руб. <span>включая все расходы*</span></p>
+			</div>
+		</div>
+		<div class="wr_descr">
+			<h3>Ликвидация компаний с долгами <br>по упрощенной процедуре банкротства</h3>
+			<p class="first"><span>Сегодня - это единственный способ избавить вас от угрозы уголовной<br> и субсидиарной ответственности</span></p>
+			<p>* Мы гарантируем эту цену для компаний Москвы и Московской области, у которых общий долг не более 1 миллиона рублей и отсутствует имущество.<br> В других случаях возможно увеличение цены.</p>
+		</div>
+	</section>
+
+	<div class="maps_form">
+		<div class="cantact_wrap">
+			<div class="cont_tel">
+				8 (499) <span>350-24-58</span>
+			</div>
+			<div class="cont_adres">
+				г. Москва, ул. Лестева, д. 18
+			</div>
+		</div>
+		<div class="maps_wr">
+			<script type="text/javascript" charset="utf-8" src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=_Dq4h-qXOZzkfEYU5bgrn80jDIme_R6e&width=55%&height=420&lang=ru_RU&sourceType=constructor"></script>
+		</div>
+
+		<div class="form_wrapper">
+			<h3>напишите нам</h3>
+			<form action="#">
+				<p><input type="text" name="name" required placeholder="Ваше имя*"></p>
+				<p><input type="tel" name="tel" required placeholder="Ваш телефон*"></p>
+				<p><input type="email" name="mail" placeholder="Ваш E-mail"></p>
+				<p><textarea name="comments" placeholder="Комментарий"></textarea></p>
+				<button class="button">отправить</button>
+			</form>
+		</div>
+
+	</div>
+
+	<footer>
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-9">
+					<div class="wrap_menu clearfix">
+						<nav class="menu clearfix">
+							<ul>
+								<li><a class="first" href="#">Услуги</a></li>
+								<li><a href="#">Преимущества</a></li>
+								<li><a href="#">Процедура банкротства</a></li>
+								<li><a href="#">О нас</a></li>
+								<li><a href="#">Цены</a></li>
+								<li><a href="#">Контакты</a></li>
+							</ul>
+						</nav>
+					</div>
+				</div>
+				<div class="col-xs-3">
+					<div class="contact">
+						8 (499) <span>350-24-58</span>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-3">
+					<div class="copyr">
+						<p>&copy; Copyright <a href="#">Разработка сайта АIDA Медiа</a></p>
+					</div>
+				</div>
+				<div class="col-xs-9">
+					<div class="top_button">
+						<a href="#">Заказать  звонок</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
 	
 	<div class="hidden"></div>
 
