--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 	<!--<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">-->
 
 	<link rel="stylesheet" href="libs/bootstrap/css/bootstrap-grid.min.css">
+	<link rel="stylesheet" href="libs/headhesive/headhesive.css">
+	<link rel="stylesheet" type="text/css" href="libs/magnific-popup/magnific-popup.css" />
 	<link rel="stylesheet" href="libs/animate/animate.css">
 
 	<link rel="stylesheet" href="css/fonts.css">
@@ -32,38 +34,40 @@
 <body>
 
 	<header class="main_head">
-		<div class="container">
-			<div class="row">
-				<div class="col-xs-4 clearpad">
-					<div class="logo_wrap">
-						<a href="/"><img src="img/logo.png" alt="Яртал Банкроство"></a>
-					</div>
-				</div>
-				<div class="col-xs-8 clearpad">
-					<div class="cantact_wr">
-						<div class="top_button">
-							<a href="#">Заказать  звонок</a>
-						</div>
-						<div class="contact">
-							8 (499) <span>350-24-58</span>
+		<div class="head-fixed banner">
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-4 clearpad">
+						<div class="logo_wrap">
+							<a href="/"><img src="img/logo.png" alt="Яртал Банкроство"></a>
 						</div>
 					</div>
-					<div class="wrap_menu">
-						<nav class="menu">
-							<ul>
-								<li><a class="first" href="#">Услуги</a></li>
-								<li><a href="#">Преимущества</a></li>
-								<li><a href="#">Процедура банкротства</a></li>
-								<li><a href="#">О нас</a></li>
-								<li><a href="#">Цены</a></li>
-								<li><a href="#">Контакты</a></li>
-							</ul>
-						</nav>
+					<div class="col-xs-8 clearpad">
+						<div class="cantact_wr">
+							<div class="top_button">
+								<a class="popup" href="#form1">Заказать  звонок</a>
+							</div>
+							<div class="contact">
+								8 (499) <span>350-24-58</span>
+							</div>
+						</div>
+						<div class="wrap_menu">
+							<nav class="menu">
+								<ul>
+									<li><a class="first" href="#uslugi">Услуги</a></li>
+									<li><a href="#preim">Преимущества</a></li>
+									<li><a href="#proc">Процедура банкротства</a></li>
+									<li><a href="#onas">О нас</a></li>
+									<li><a href="#price">Цены</a></li>
+									<li><a href="#contact">Контакты</a></li>
+								</ul>
+							</nav>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="home_sect">
+		<div class="home_sect" id="uslugi">
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-12">
@@ -117,10 +121,15 @@
 							<h3>оставьте заявку</h3>
 							<p>на получение консультации у <strong>арбитражного управляющего</strong></p>
 							<div class="form_wrap">
-								<form action="#">
+								<form action="#" id="form4">
 									<input type="text" name="name" required placeholder="Ваше имя">
 									<input type="tel" name="tel" required placeholder="Ваш номер телефона">
 									<button type="submit" class="button">Получить консультацию</button>
+									<!-- Hidden Required Fields -->
+									<input type="hidden" name="project_name" value="Yartal">
+									<input type="hidden" name="admin_email" value="ebortnikov@mail.ru">
+									<input type="hidden" name="form_subject" value="Форма оставить заявку с первого экрана">
+									<!-- END Hidden Required Fields -->
 								</form>
 							</div>
 						</div>
@@ -129,8 +138,9 @@
 			</div>
 		</div>
 	</header>
+	<a id="showHere"></a>
 
-	<section class="sect_white section1">
+	<section class="sect_white section1" id="preim">
 		<div class="title_sect_wrap">
 			<h2>КЛЮЧЕВЫЕ ПРЕИМУЩЕСТВА</h2>
 		</div>
@@ -198,7 +208,7 @@
 		</div>
 	</section>
 
-	<section class="sect_color section2">
+	<section class="sect_color section2" id="proc">
 		<div class="title_sect_wrap">
 			<h2>КАК ПРОИСХОДИТ БАНКРОТСТВО</h2>
 			<p>Банкроство проходит в 6 этапов и занимает <strong>от 3 до 6 месяцев.</strong></p>
@@ -280,12 +290,12 @@
 		</div>
 
 		<div class="top_button">
-			<a href="#">Получить консультацию сейчас</a>
+			<a href="#form3" class="popup">Получить консультацию сейчас</a>
 		</div>
 		
 	</section>
 
-	<section class="sect_color section5">
+	<section class="sect_color section5" id="onas">
 		<div class="title_sect_wrap">
 			<h2>НАШИ АРБИТРАЖНЫЕ УПРАВЛЯЮЩИЕ</h2>
 		</div>
@@ -422,12 +432,12 @@
 		</div>
 
 		<div class="top_button">
-			<a href="#">Оставьте заявку на сайте</a>
+			<a href="#form2" class="popup">Оставьте заявку на сайте</a>
 		</div>
 		
 	</section>
 
-	<section class="sect_color section7">
+	<section class="sect_color section7" id="price">
 		<div class="title_sect_wrap">
 			<h2>СТОИМОСТЬ БАЗОВОЙ ПРОЦЕДУРЫ</h2>
 		</div>
@@ -443,7 +453,7 @@
 		</div>
 	</section>
 
-	<div class="maps_form">
+	<div class="maps_form" id="contact">
 		<div class="cantact_wrap">
 			<div class="cont_tel">
 				8 (499) <span>350-24-58</span>
@@ -458,12 +468,17 @@
 
 		<div class="form_wrapper">
 			<h3>напишите нам</h3>
-			<form action="#">
+			<form action="#" id="form5">
 				<p><input type="text" name="name" required placeholder="Ваше имя*"></p>
 				<p><input type="tel" name="tel" required placeholder="Ваш телефон*"></p>
 				<p><input type="email" name="mail" placeholder="Ваш E-mail"></p>
 				<p><textarea name="comments" placeholder="Комментарий"></textarea></p>
 				<button class="button">отправить</button>
+				<!-- Hidden Required Fields -->
+				<input type="hidden" name="project_name" value="Yartal">
+				<input type="hidden" name="admin_email" value="ebortnikov@mail.ru">
+				<input type="hidden" name="form_subject" value="форма напишите нам с окна с картой">
+				<!-- END Hidden Required Fields -->
 			</form>
 		</div>
 
@@ -476,12 +491,12 @@
 					<div class="wrap_menu clearfix">
 						<nav class="menu clearfix">
 							<ul>
-								<li><a class="first" href="#">Услуги</a></li>
-								<li><a href="#">Преимущества</a></li>
-								<li><a href="#">Процедура банкротства</a></li>
-								<li><a href="#">О нас</a></li>
-								<li><a href="#">Цены</a></li>
-								<li><a href="#">Контакты</a></li>
+								<li><a class="first" href="#uslugi">Услуги</a></li>
+								<li><a href="#preim">Преимущества</a></li>
+								<li><a href="#proc">Процедура банкротства</a></li>
+								<li><a href="#onas">О нас</a></li>
+								<li><a href="#price">Цены</a></li>
+								<li><a href="#contact">Контакты</a></li>
 							</ul>
 						</nav>
 					</div>
@@ -495,19 +510,59 @@
 			<div class="row">
 				<div class="col-xs-3">
 					<div class="copyr">
-						<p>&copy; Copyright <a href="#">Разработка сайта АIDA Медiа</a></p>
+						<p>&copy; Copyright <a href="http://aida-media.ru/">Разработка сайта АIDA Медiа</a></p>
 					</div>
 				</div>
 				<div class="col-xs-9">
 					<div class="top_button">
-						<a href="#">Заказать  звонок</a>
+						<a href="#form1" class="popup">Заказать  звонок</a>
 					</div>
 				</div>
 			</div>
 		</div>
 	</footer>
 	
-	<div class="hidden"></div>
+	<div class="hidden">
+		
+		<form  id="form1">
+			<h3>заказать звонок</h3>
+			<p><input type="text" name="name" required placeholder="Ваше имя*"></p>
+			<p><input type="tel" name="tel" required placeholder="Ваш телефон*"></p>
+			<button class="button">Отправить</button>
+			<!-- Hidden Required Fields -->
+			<input type="hidden" name="project_name" value="Yartal">
+			<input type="hidden" name="admin_email" value="ebortnikov@mail.ru">
+			<input type="hidden" name="form_subject" value="Заказ обратного звонка c попап формы">
+			<!-- END Hidden Required Fields -->
+		</form>
+
+		<form  id="form2">
+			<h3>оставить заявку</h3>
+			<p><input type="text" name="name" required placeholder="Ваше имя*"></p>
+			<p><input type="tel" name="tel" required placeholder="Ваш телефон*"></p>
+			<p><input type="email" name="mail" placeholder="Ваш E-mail"></p>
+			<button class="button">Отправить</button>
+			<!-- Hidden Required Fields -->
+			<input type="hidden" name="project_name" value="Yartal">
+			<input type="hidden" name="admin_email" value="ebortnikov@mail.ru">
+			<input type="hidden" name="form_subject" value="Форма оставить заявку c попап формы">
+			<!-- END Hidden Required Fields -->
+		</form>
+
+		<form  id="form3">
+			<h3>получить консультацию</h3>
+			<p><input type="text" name="name" required placeholder="Ваше имя*"></p>
+			<p><input type="tel" name="tel" required placeholder="Ваш телефон*"></p>
+			<p><input type="email" name="mail" placeholder="Ваш E-mail"></p>
+			<button class="button">Отправить</button>
+			<!-- Hidden Required Fields -->
+			<input type="hidden" name="project_name" value="Yartal">
+			<input type="hidden" name="admin_email" value="ebortnikov@mail.ru">
+			<input type="hidden" name="form_subject" value="Форма получить консультацию c попап формы">
+			<!-- END Hidden Required Fields -->
+		</form>
+
+	</div>
 
 	<div class="loader">
 		<div class="loader_inner"></div>
@@ -523,6 +578,9 @@
 	<script src="libs/jquery/jquery-1.11.2.min.js"></script>
 	<script src="libs/waypoints/waypoints.min.js"></script>
 	<script src="libs/animate/animate-css.js"></script>
+	<script src="libs/headhesive/headhesive.js"></script>
+	<script src="libs/scroll2id/PageScroll2id.min.js"></script>
+	<script src="libs/magnific-popup/jquery.magnific-popup.min.js"></script>
 	<script src="libs/plugins-scroll/plugins-scroll.js"></script>
 	
 	<script src="js/common.js"></script>
