--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 	<meta charset="utf-8">
 
-	<title>Яртал</title>
+	<title>Антикиризисная юридическая компания «Яртал Банкротство»</title>
 	<meta name="description" content="Комплексное сопровождение процедуры банкротства юридических лиц 
 	Ликвидация юридического лица через процедуру банкротства">
 
@@ -68,6 +68,7 @@
 			</div>
 		</div>
 		<div class="home_sect" id="uslugi">
+			<a id="showHere"></a>
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-12">
@@ -92,42 +93,42 @@
 							</div>
 							<div class="item">
 								<div class="img_wrap">
-									<img src="img/icon_podg.png" alt="Подготовка к процедуре банкротства">
+									<img src="img/icon_licv.png" height="123" width="123" alt="Ликвидация через банкротство">
 								</div>
-								<p>Подготовка к процедуре банкротства</p>
+								<p>Ликвидация через банкротство</p>
 							</div>
 							<div class="item">
 								<div class="img_wrap">
-									<img src="img/icon_podg.png" alt="Подготовка к процедуре банкротства">
+									<img src="img/icon_dolzh.png" height="123" width="123" alt="Ведение процедуры банкротства">
 								</div>
-								<p>Подготовка к процедуре банкротства</p>
+								<p>Ведение процедуры банкротства по инициативе должника (кредитора)</p>
 							</div>
 							<div class="item">
 								<div class="img_wrap">
-									<img src="img/icon_podg.png" alt="Подготовка к процедуре банкротства">
+									<img src="img/icon_complex.png" height="123" width="123" alt="Комплексное сопровождение">
 								</div>
-								<p>Подготовка к процедуре банкротства</p>
+								<p>Комплексное сопровождение процедуры банкротства </p>
 							</div>
 							<div class="item">
 								<div class="img_wrap">
-									<img src="img/icon_podg.png" alt="Подготовка к процедуре банкротства">
+									<img src="img/icon_cons.png" height="123" width="123" alt="Консультации по банкротству">
 								</div>
-								<p>Подготовка к процедуре банкротства</p>
+								<p>Консультации по банкротству физических и юридических лиц</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-xs-12">
-						<div class="form_home_sect">
+						<div class="form_home_sect" >
 							<h3>оставьте заявку</h3>
 							<p>на получение консультации у <strong>арбитражного управляющего</strong></p>
 							<div class="form_wrap">
 								<form action="#" id="form4">
 									<input type="text" name="name" required placeholder="Ваше имя">
-									<input type="tel" name="tel" required placeholder="Ваш номер телефона">
-									<button type="submit" class="button">Получить консультацию</button>
+									<input type="tel" id="phone4" name="tel" required placeholder="Ваш номер телефона">
+									<button id="preim" type="submit" class="button">Получить консультацию</button>
 									<!-- Hidden Required Fields -->
 									<input type="hidden" name="project_name" value="Yartal">
-									<input type="hidden" name="admin_email" value="ebortnikov@mail.ru">
+									<input type="hidden" name="admin_email" value="info@bankroting.ru">
 									<input type="hidden" name="form_subject" value="Форма оставить заявку с первого экрана">
 									<!-- END Hidden Required Fields -->
 								</form>
@@ -138,9 +139,9 @@
 			</div>
 		</div>
 	</header>
-	<a id="showHere"></a>
+	
 
-	<section class="sect_white section1" id="preim">
+	<section class="sect_white section1" >
 		<div class="title_sect_wrap">
 			<h2>КЛЮЧЕВЫЕ ПРЕИМУЩЕСТВА</h2>
 		</div>
@@ -201,14 +202,15 @@
 							<img src="img/icon6_sect1.png" alt="Консультация">
 						</div>
 						<h4>Отсутствие рисков</h4>
-						<p>Непогашенная задолженность перед бюджетом, контрагентами и другими кредиторами будет списана по решению суда</p>
+						<p >Непогашенная задолженность перед бюджетом, контрагентами и другими кредиторами будет списана по решению суда</p>
 					</div>
 				</div>
 			</div>
 		</div>
+		<div id="proc"></div>
 	</section>
 
-	<section class="sect_color section2" id="proc">
+	<section class="sect_color section2" >
 		<div class="title_sect_wrap">
 			<h2>КАК ПРОИСХОДИТ БАНКРОТСТВО</h2>
 			<p>Банкроство проходит в 6 этапов и занимает <strong>от 3 до 6 месяцев.</strong></p>
@@ -292,10 +294,10 @@
 		<div class="top_button">
 			<a href="#form3" class="popup">Получить консультацию сейчас</a>
 		</div>
-		
+		<div id="onas"></div>
 	</section>
 
-	<section class="sect_color section5" id="onas">
+	<section class="sect_color section5" >
 		<div class="title_sect_wrap">
 			<h2>НАШИ АРБИТРАЖНЫЕ УПРАВЛЯЮЩИЕ</h2>
 		</div>
@@ -434,10 +436,10 @@
 		<div class="top_button">
 			<a href="#form2" class="popup">Оставьте заявку на сайте</a>
 		</div>
-		
+		<div id="price"></div>
 	</section>
 
-	<section class="sect_color section7" id="price">
+	<section class="sect_color section7" >
 		<div class="title_sect_wrap">
 			<h2>СТОИМОСТЬ БАЗОВОЙ ПРОЦЕДУРЫ</h2>
 		</div>
@@ -454,33 +456,47 @@
 	</section>
 
 	<div class="maps_form" id="contact">
-		<div class="cantact_wrap">
-			<div class="cont_tel">
-				8 (499) <span>350-24-58</span>
+
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-7 clearpad">
+					<div class="cantact_wrap">
+						<div class="cont_tel">
+							8 (499) <span>350-24-58</span>
+						</div>
+						<div class="cont_adres">
+							г. Москва, ул. Лестева, д. 18
+						</div>
+					</div>
+					<div class="maps_wr">
+						<script type="text/javascript" charset="utf-8" src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=Ymv2ce34uRPYbpWFIDSTrEGsAPWWGZBt&width=682&height=420&lang=ru_RU&sourceType=constructor"></script>
+					</div>
+				</div>
+				<div class="col-xs-5 clearfix">
+					<div class="form_wrapper">
+						<h3>напишите нам</h3>
+						<form action="#" id="form5">
+							<p><input type="text" name="name" required placeholder="Ваше имя*"></p>
+							<p><input type="tel" id="phone5" name="tel" required placeholder="Ваш телефон*"></p>
+							<p><input type="email" name="mail" placeholder="Ваш E-mail"></p>
+							<p><textarea name="comments" placeholder="Комментарий"></textarea></p>
+							<button class="button">отправить</button>
+							<!-- Hidden Required Fields -->
+							<input type="hidden" name="project_name" value="Yartal">
+							<input type="hidden" name="admin_email" value="info@bankroting.ru">
+							<input type="hidden" name="form_subject" value="форма напишите нам с окна с картой">
+							<!-- END Hidden Required Fields -->
+						</form>
+					</div>
+				</div>
 			</div>
-			<div class="cont_adres">
-				г. Москва, ул. Лестева, д. 18
-			</div>
-		</div>
-		<div class="maps_wr">
-			<script type="text/javascript" charset="utf-8" src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=_Dq4h-qXOZzkfEYU5bgrn80jDIme_R6e&width=55%&height=420&lang=ru_RU&sourceType=constructor"></script>
 		</div>
 
-		<div class="form_wrapper">
-			<h3>напишите нам</h3>
-			<form action="#" id="form5">
-				<p><input type="text" name="name" required placeholder="Ваше имя*"></p>
-				<p><input type="tel" name="tel" required placeholder="Ваш телефон*"></p>
-				<p><input type="email" name="mail" placeholder="Ваш E-mail"></p>
-				<p><textarea name="comments" placeholder="Комментарий"></textarea></p>
-				<button class="button">отправить</button>
-				<!-- Hidden Required Fields -->
-				<input type="hidden" name="project_name" value="Yartal">
-				<input type="hidden" name="admin_email" value="ebortnikov@mail.ru">
-				<input type="hidden" name="form_subject" value="форма напишите нам с окна с картой">
-				<!-- END Hidden Required Fields -->
-			</form>
-		</div>
+
+
+		
+
+		
 
 	</div>
 
@@ -510,7 +526,7 @@
 			<div class="row">
 				<div class="col-xs-3">
 					<div class="copyr">
-						<p>&copy; Copyright <a href="http://aida-media.ru/">Разработка сайта АIDA Медiа</a></p>
+						<p>&copy; Copyright <a href="http://aida-media.ru/">Разработка сайта</a><span> AIDA Media</span></p>
 					</div>
 				</div>
 				<div class="col-xs-9">
@@ -527,11 +543,11 @@
 		<form  id="form1">
 			<h3>заказать звонок</h3>
 			<p><input type="text" name="name" required placeholder="Ваше имя*"></p>
-			<p><input type="tel" name="tel" required placeholder="Ваш телефон*"></p>
+			<p><input type="tel" name="tel" id="phone"  required placeholder="Ваш телефон*"></p>
 			<button class="button">Отправить</button>
 			<!-- Hidden Required Fields -->
 			<input type="hidden" name="project_name" value="Yartal">
-			<input type="hidden" name="admin_email" value="ebortnikov@mail.ru">
+			<input type="hidden" name="admin_email" value="info@bankroting.ru">
 			<input type="hidden" name="form_subject" value="Заказ обратного звонка c попап формы">
 			<!-- END Hidden Required Fields -->
 		</form>
@@ -539,12 +555,12 @@
 		<form  id="form2">
 			<h3>оставить заявку</h3>
 			<p><input type="text" name="name" required placeholder="Ваше имя*"></p>
-			<p><input type="tel" name="tel" required placeholder="Ваш телефон*"></p>
+			<p><input type="tel" id="phone2" name="tel" required placeholder="Ваш телефон*"></p>
 			<p><input type="email" name="mail" placeholder="Ваш E-mail"></p>
 			<button class="button">Отправить</button>
 			<!-- Hidden Required Fields -->
 			<input type="hidden" name="project_name" value="Yartal">
-			<input type="hidden" name="admin_email" value="ebortnikov@mail.ru">
+			<input type="hidden" name="admin_email" value="info@bankroting.ru">
 			<input type="hidden" name="form_subject" value="Форма оставить заявку c попап формы">
 			<!-- END Hidden Required Fields -->
 		</form>
@@ -552,12 +568,12 @@
 		<form  id="form3">
 			<h3>получить консультацию</h3>
 			<p><input type="text" name="name" required placeholder="Ваше имя*"></p>
-			<p><input type="tel" name="tel" required placeholder="Ваш телефон*"></p>
+			<p><input type="tel" id="phone3" name="tel" required placeholder="Ваш телефон*"></p>
 			<p><input type="email" name="mail" placeholder="Ваш E-mail"></p>
 			<button class="button">Отправить</button>
 			<!-- Hidden Required Fields -->
 			<input type="hidden" name="project_name" value="Yartal">
-			<input type="hidden" name="admin_email" value="ebortnikov@mail.ru">
+			<input type="hidden" name="admin_email" value="info@bankroting.ru">
 			<input type="hidden" name="form_subject" value="Форма получить консультацию c попап формы">
 			<!-- END Hidden Required Fields -->
 		</form>
@@ -581,6 +597,7 @@
 	<script src="libs/headhesive/headhesive.js"></script>
 	<script src="libs/scroll2id/PageScroll2id.min.js"></script>
 	<script src="libs/magnific-popup/jquery.magnific-popup.min.js"></script>
+	<script src="libs/maskedinput/jquery.maskedinput.min.js"></script>
 	<script src="libs/plugins-scroll/plugins-scroll.js"></script>
 	
 	<script src="js/common.js"></script>
