--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
 								<div class="img_wrap">
 									<img src="img/icon_dolzh.png" height="123" width="123" alt="Ведение процедуры банкротства">
 								</div>
-								<p>Ведение процедуры банкротства по инициативе должника (кредитора)</p>
+								<p>Комплексное сопровождение процедуры банкротства</p>
 							</div>
 							<div class="item">
 								<div class="img_wrap">
 									<img src="img/icon_complex.png" height="123" width="123" alt="Комплексное сопровождение">
 								</div>
-								<p>Комплексное сопровождение процедуры банкротства </p>
+								<p>Ведение процедуры банкротства по инициативе должника (кредитора)</p>
 							</div>
 							<div class="item">
 								<div class="img_wrap">
@@ -238,9 +238,9 @@
 					</div>
 				</div>
 			</div>
-			<div class="row">
+			<div class="row row_mart">
 				<div class="col-xs-4 col-xs-offset-2 clearpad">
-					<div class="item_sect3_left">
+					<div class="item_sect3_left line_ic">
 						<div class="number">
 							3
 						</div>
@@ -260,7 +260,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="row">
+			<div class="row row_mart_last">
 				<div class="col-xs-4 col-xs-offset-2 clearpad">
 					<div class="item_sect3_left">
 						<div class="number">
@@ -272,7 +272,7 @@
 					</div>
 				</div>
 				<div class="col-xs-4 clearpad">
-					<div class="item_sect3_right">
+					<div class="item_sect3_right item_sect3_right_last">
 						<div class="item_descr">
 							<p>Исключение компании из ЕГРЮЛ</p>
 						</div>
@@ -469,7 +469,7 @@
 						</div>
 					</div>
 					<div class="maps_wr">
-						<script type="text/javascript" charset="utf-8" src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=Ymv2ce34uRPYbpWFIDSTrEGsAPWWGZBt&width=682&height=420&lang=ru_RU&sourceType=constructor"></script>
+						<script type="text/javascript" charset="utf-8" src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=m0RH0lt-eO5EW-1xg0UYvSCyses6Bou4&width=682&height=420&lang=ru_RU&sourceType=constructor"></script>
 					</div>
 				</div>
 				<div class="col-xs-5 clearfix">
@@ -577,6 +577,11 @@
 			<input type="hidden" name="form_subject" value="Форма получить консультацию c попап формы">
 			<!-- END Hidden Required Fields -->
 		</form>
+
+		<div  class="done">
+			<h3>Спасибо за заявку! С вами свяжутся в ближайшее время.</h3>
+			
+		</div>
 
 	</div>
 
